Change base_paths and output format to make it work on the server (don't know what's wrong with the python file, but this seems to make it work)

--- a/concept-graphs/conceptgraph/hydra_configs/base_paths.yaml
+++ b/concept-graphs/conceptgraph/hydra_configs/base_paths.yaml
@@ -1,3 +1,3 @@
 # Main paths
-repo_root: /home/b.gandhi/iruchkin-b.gandhi/Multimodal WM/concept-graphs
-data_root: /home/b.gandhi/iruchkin-b.gandhi/Multimodal WM/my_local_data
+repo_root: /home/UFAD/isen/multimodal-world-models/concept-graphs
+data_root: /home/UFAD/isen/multimodal-world-models/my_local_data
